--- a/singlelec.html
+++ b/singlelec.html
@@ -1,5 +1,8 @@
 <html>
-<title>TED Stats - Add a single lecture</title>
+<head>
+    <meta charset="utf-8" />
+    <title>TED Stats - Add a single lecture</title>
+</head>
 <body>
 <link href="styles.css" rel="stylesheet" type="text/css">
 <div class="topbanner">
